--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,12 @@ main {
     display: flex;
     flex-direction: column;
     padding: 10px;
+    border-radius: 5px;
 }
 
 .display {
     box-shadow: 0 0 4px black;
-    height: 15vw;
+    height: 10vw;
     width: 100%;
     display: flex;
     align-items: center;
@@ -89,11 +90,6 @@ main {
     grid-template-rows: repeat(5, calc(100%/5));
 }
 
-.number0 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-
 .buttons>* {
     -webkit-user-select: none;
     -webkit-touch-callout: none;
@@ -106,6 +102,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .buttons>*:hover {
