--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,12 @@ main {
     color: var(--clr-orange);
     margin: 0 auto;
     width: 95vw;
-    max-width: 400px;
+    max-width: 350px;
     height: 100vw;
     max-height: 450px;
     box-shadow: 0 0 8px black;
     display: flex;
+    gap: 15px;
     flex-direction: column;
     padding: 10px;
     border-radius: 5px;
@@ -73,16 +74,23 @@ main {
 
 .display {
     box-shadow: 0 0 4px black;
+    border-radius: 5px;
     height: 25vw;
     max-height: 90px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
     align-items: end;
-    justify-content: center;
+    justify-content: space-around;
     padding: 15px;
     font-size: 25px;
+}
+
+.prevNumbers,
+.newNumber{
+    text-align: end;
+    width: 100%;
+    height: 50%;
 }
 
 .buttons {
